fixed the toolbar on the profile customization page on mobile devices

--- a/yb_customize/static/css/customization/yb_customization.css
+++ b/yb_customize/static/css/customization/yb_customization.css
@@ -918,29 +918,34 @@
     }
 
     .yb-tb-theme-section {
-        grid-column-start: 2;
+        grid-column-start: 1;
         grid-column-end: 4;
         display: grid;
         grid-template-columns: 5fr 1fr 1.5fr;
         grid-row: 1;
         grid-gap: 3px;
         padding-right: 5px;
+        border-bottom: 1px solid gray;
     }
 
     .yb-tb-button-back {
         position: relative;
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 20px 1fr;
         line-height: 1.5;
-        height: 70px;
-        width: 95%;
+        height: 100%;
+        width: 100%;
         color: white;
         margin: auto;
         transition: 0.5s;
         grid-column: 1;
         border-width: 0px;
-        grid-row-start: 1;
-        grid-row-end: 3;
+        /* border-top: 1px solid gray; */
+        border-right: 1px solid gray;
+        /* grid-row-start: 1; */
+        /* grid-row-end: 3; */
+        grid-row: 2;
+        /* padding: 3px 2px 3px 2px; */
     }
     .yb-tb-undo-section {
         grid-column: 2;
@@ -952,6 +957,7 @@
         border-left: 1px solid gray;
         grid-row: 2;
         border-right: 1px solid gray;
+        /* border-top: 1px solid gray; */
     }
 
     .yb-tb-button-save {
